fixing issue where spaces where collapsing around emojis in search filters

--- a/styles/modules/_search.scss
+++ b/styles/modules/_search.scss
@@ -183,6 +183,13 @@
     .select2 {
       margin-top: 12px;
     }
+
+    .btnRadio, .checkboxCol {
+      label > span .emoji {
+        position: relative;
+        top: 0.1em;
+      }
+    }
   }
 
   .searchResults {
